Fix some style issues with the new sidebar
- Don’t force `white-space: nowrap` on every link in the sidebar
- Widen the sidebar on mobile none of the longer module names are cut off
- Make the + / - buttons larger
- Remove uses of !important

--- a/static/sidebar.less
+++ b/static/sidebar.less
@@ -88,10 +88,6 @@ img.social-icon-small{
 		display: block;
 		padding: @gutter * 2 @gutter * 2 0;
 
-		a {
-			white-space: nowrap;
-		}
-
 		& > ul {
 			padding: 0;
 			height: inherit;
@@ -135,69 +131,69 @@ img.social-icon-small{
 			}
 		}
 	}
-}
 
-// ----- CLIENT-SIDE COMPONENT -----
-canjs-sidebar {
-	button {
-		background: transparent;
-		border: 0;
-		color: @link-color;
-		cursor: pointer;
-		padding: 0;
-		position: absolute;
-		right: 0 - @gutter;
-		top: 0;
-	}
-	button > span {
-		font-family: monospace;// makes the + / - buttons the same width
-		font-size: 130%;
-		padding: (@gutter * .25) @gutter (@gutter * .6);
-	}
-	button:focus, button > span:focus {
-		outline: 0;
-	}
-	button:focus > span {
-		outline: -webkit-focus-ring-color auto 5px;
-	}
+	canjs-sidebar {
+		button {
+			background: transparent;
+			border: 0;
+			color: @link-color;
+			cursor: pointer;
+			padding: 0;
+			position: absolute;
+			right: 0 - @gutter;
+			top: 0;
+		}
+		button > span {
+			font-family: monospace;// makes the + / - buttons the same width
+			font-size: 130%;
+			padding: (@gutter * .25) @gutter (@gutter * .6);
+		}
+		button:focus, button > span:focus {
+			outline: 0;
+		}
+		button:focus > span {
+			outline: -webkit-focus-ring-color auto 5px;
+		}
 
-	.collection-group {
-		font-size: 80%;
-		margin-top: @gutter * 1.2;
-		text-transform: uppercase;
-	}
+		.collection-group {
+			font-size: 80%;
+			margin-top: @gutter * 1.2;
+			text-transform: uppercase;
+		}
 
-	.collection-group,
-	.collection-group > a,
-	.parent-is-collapsible,
-	.parent-is-collapsible > a {
-		display: block;
-		opacity: 1;
-	}
-	.transitions-on .collection-group,
-	.transitions-on .collection-group > a,
-	.transitions-on .parent-is-collapsible,
-	.transitions-on .parent-is-collapsible > a {
-		transition: all @transition-speed ease;
-	}
-	.collection-group > a {
-		height: 20px;
-	}
-	.parent-is-collapsible > a {
-		height: 24px;
-	}
-	.unanimated, .unanimated > a, .unanimated > span {
-		margin-bottom: 0;
-		margin-top: 0 !important;
-		opacity: 0;
-		padding-bottom: 0 !important;
-		padding-top: 0 !important;
-	}
-	.unanimated > a, .unanimated > span {
-		height: 0;
-	}
+		.collection-group,
+		.collection-group > a,
+		.parent-is-collapsible,
+		.parent-is-collapsible > a {
+			display: block;
+			opacity: 1;
+		}
+		.transitions-on .collection-group,
+		.transitions-on .collection-group > a,
+		.transitions-on .parent-is-collapsible,
+		.transitions-on .parent-is-collapsible > a {
+			transition: all @transition-speed ease;
+		}
+		.collection-group > a {
+			height: 20px;
+		}
+		.parent-is-collapsible > a {
+			height: 24px;
+			white-space: nowrap;
+		}
+		.unanimated, .unanimated > a, .unanimated > span {
+			margin-bottom: 0;
+			margin-top: 0;
+			opacity: 0;
+			padding-bottom: 0;
+			padding-top: 0;
+		}
+		.unanimated > a, .unanimated > span {
+			height: 0;
+		}
 
-	.is-collapsible {
-		margin-bottom: @gutter;// Force space between the “purpose” groups
+		.is-collapsible {
+			margin-bottom: @gutter;// Force space between the “purpose” groups
+		}
 	}
 }
